# topeft

./: .gitignore  README.md  README_FITTING.md  README_WORKQUEUE.md  codecov.yml  compare.py  environment.yml  mkdocs.yml  pyproject.toml  run.py  setup.py  setupTH1EFT.sh  sitecustomize.py  topeft-coffea-casa.ipynb  unit.py
Utils/: TH1EFT.cc  TH1EFT.h  WCFit.h  WCPoint.h  split_string.h
analysis/: __init__.py  channel_inventory.json  channel_inventory.md  channel_inventory.py  channels_schema.yaml  metadata_channels.md
cfg/: 2018.cfg  samples.cfg  xsec.cfg
docs/: analysis_processing.md  dataclasses_and_metadata.md  environment_packaging.md  index.md  quickstart_run2.md  quickstart_top22_006.md  run2_scenarios.md  run_analysis_cli_reference.md  run_analysis_configuration.md  run_and_plot_quickstart.md  sample_metadata_reference.md  taskvine_workflow.md  tuple_key_audit.md  workflow_and_yaml_hub.md
histos/: ttx_multileptons-2lss_p_2b_ref.txt  ttx_multileptons-2lss_p_4j_2b_ht_ref.txt  ttx_multileptons-3l_onZ_1b_2j_ptbl_ref.txt  ttx_multileptons-3l_sfz_1b_ref.txt
input_root_files/: data_samples.cfg
moca/: corrections.py  functions.py  objects.py  samples.py  selection.py
modules/: HistEFT.py  WCFit.py  WCPoint.py  corrections.py  fileReader.py  objects.py  selection.py  topeft.py
notebooks/: coffea-casa draft.ipynb  coffea-casa.ipynb  graph.ipynb  topeft-coffea-casa.ipynb
notes/: format_update_anpicci_calcoffea.md
plotter/: OutText.py  plotter.py
reports/: topeft-run2-groups-step5P1-20251202-1517.md  topeft-run2-scenarios-step5P2-20251202-1610.md  (+7 more)
(+2916 files in other folders)
